# Grandmaster-Forge-Rust

./: .env.example  .gitignore  .ignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: pr-fast.yml
app/: Cargo.toml
app/src/: accuracy.rs  fsrs.rs  main.rs  mock_stockfish.rs  scraper.rs  srs.rs  tree.rs  weakness.rs
chesscom_client/: Cargo.toml
chesscom_client/src/: lib.rs
db_manager/: Cargo.toml
db_manager/src/: lib.rs
docs/superpowers/plans/: 2026-06-12-grandmaster-forge-full-platform.md  2026-07-01-repertoire-tree-and-bot-play.md  2026-07-06-post-game-review-polish.md  2026-07-07-course-ui-and-import-routing.md  2026-07-07-opening-course-metadata-and-status.md  2026-07-07-review-event-spine.md  2026-07-11-board-flip.md  2026-07-11-fsrs-migration.md  2026-07-11-puzzle-review-events-and-weak-lines.md
docs/superpowers/specs/: 2026-07-01-repertoire-tree-and-bot-play-design.md  2026-07-06-post-game-review-polish-design.md  2026-07-07-current-direction-gap-audit.md  2026-07-07-learning-scheduler-and-position-identity-design.md  2026-07-07-opening-course-graph-design.md  2026-07-07-tactical-scrutinizer-design.md  2026-07-10-puzzle-trainer-v1-notes.md  2026-07-11-board-flip-design.md  2026-07-11-fsrs-migration-design.md
engine_controller/: Cargo.toml
engine_controller/src/: lib.rs
lichess_client/: Cargo.toml
lichess_client/src/: explorer.rs  games.rs  lib.rs  puzzles.rs  studies.rs
mastery_ui/: Cargo.toml
mastery_ui/src/: lib.rs
pgn_processor/: Cargo.toml
pgn_processor/src/: lib.rs
